# synthea-fhir-starter

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: 1-synthea-dataset.md  2-hapi-fhir.md  3-hapi-fhir-with-postgres.md  4-fhir-mcp-server.md  5-observational-data-charts.md  5-querying-fhir.md  6-clinical-coding.md  7-observational-data-charts.md
scripts/: create_charts.py  identify_chartable_patients.py  upload-fhir.sh
